# Frames

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  flowchart.html  index.html  main.py  pyproject.toml  requirements.txt  server.py
assets/css/: styles.css
assets/js/: catalogue.js  main.js  reel-download.js  ui.js
assets/videos/new  videos/: bootstrap-shoes (1).txt  bootstrap-shoes.txt  bryan-and-candy-new-york.txt  burgerking-gormet-burger.txt  curlsmith-curly-hair-dryer.txt  logitech-ergonomic-mouse (2).txt  mamaearth-ubtan-face-wash (1).txt  mamaearth-ubtan-face-wash (12).txt  oreo-biscuit (2).txt  oreo-biscuit (3).txt  oreo.txt  playwhiskers-cat-wand (1).txt  reel-draft-2026-07-01-12-36-48.txt  reel-draft-2026-07-01-12-54-25.txt  sennheiser-headphones(12).txt  sennheiser-headphones.txt  skybags-trekk.txt  sleep-company.txt
src/: gallery.py  http_client.py  image_prep.py  openrouter_credits.py  text_gen.py  video_gen.py  video_models.py
