[project]
name = "video-generation-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0",
    "flask>=3.1",
    "gunicorn>=23.0",
    "pillow>=11.0",
    "python-dotenv>=1.2",
    "requests>=2.34",
]
